--- a/portfolio/src/style/Skills/skills.css
+++ b/portfolio/src/style/Skills/skills.css
@@ -1,8 +1,7 @@
 
 .container{
-  margin:0;
-  padding:0;
   display:block;
+  padding-left: 20%;
 }
 
 /* #C252E1 */
@@ -12,6 +11,7 @@
    width:250px;
    border-radius: 50% 50% 40% 40% / 40% 40% 60% 60%;
    position: relative;
+
 }
 
 .onion::before{
@@ -23,6 +23,7 @@
   border-radius: 40% 40% 60% 60% / 20% 20% 40% 40%;
   z-index: 5;
   position: absolute;
+  border: #fff solid;
 }
 /* #7542da */
 
@@ -34,8 +35,5 @@
 
 
 
-/* width: 200px; 
-height: 200px;
-background-color: rgb(186, 186, 248);
-border-radius: 0 80% 0 80%;   */
+
 
