--- a/portfolio/src/style/index.css
+++ b/portfolio/src/style/index.css
@@ -6,20 +6,25 @@
   
    @import url("https://fonts.googleapis.com/css?family=Barlow|Tomorrow:400,700&display=swap");
 
-*{
+body{
     background-color: #001D31;
 }
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+ }
 
 .container{
     width:100%;
     height:100vh;
-    overflow-y: scroll;
     scroll-snap-type: y mandatory;
 }
 
 section{
-    display:grid;
+    margin-top: 8rem;
     align-items: center;
-    scroll-snap-align: start;
-    min-height: 100vh;
+    scroll-snap-align: start; 
+    height: 100vh;
 }
