--- a/portfolio/src/style/home.css
+++ b/portfolio/src/style/home.css
@@ -1,7 +1,10 @@
 
 .home-container{
-  padding-left:25%;
-  margin-top: 250px;
+  padding-left:15%;
+  margin-left: 15%;
+  margin-right: 15%;
+  padding-top:15%;
+  padding-bottom:15%;
 }
 
  .Topic{
