--- a/portfolio/src/style/index.css
+++ b/portfolio/src/style/index.css
@@ -14,17 +14,24 @@ body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border:0;
+    outline:0;
+    list-style: none;
+    text-decoration: none;
  }
 
 .container{
     width:100%;
     height:100vh;
     scroll-snap-type: y mandatory;
+    margin:0 auto;
 }
 
 section{
-    margin-top: 8rem;
     align-items: center;
     scroll-snap-align: start; 
     height: 100vh;
 }
+
+
+
