--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -16,58 +16,141 @@
     margin-left: 44rem;
     margin-right:37rem;
 }
+/* red #ff2770
+blue #45f3ff
+#6B0082 purple
+#A60057 midnight red */
 
-img {
+.frame{
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1.2rem;
+    border-radius: 0.5rem;
     position: relative;
-    width: 100%; 
-    border-width: 0.5rem;
-  }
-
-.project_item{
-    background-color: #00A1D5;
-    padding:1.2rem;
-    border-radius: 2rem;
-    border: 1px solid transparent;
-    transition: ease-in-out;
+    overflow: hidden;
 }
 
-.project_item .project_img{
-    border-radius: 2rem;
-    overflow: hidden;
+.frame::before{
+    content:'';
+    position: absolute;
+    inset: -50% 20%;
+    background: linear-gradient(32deg, #00ccff, #ff05ff);
+    transition: 0.5s;
+    animation: animation-item 4s linear infinite;
+}
+
+@keyframes animation-item{
+
+    0%{
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.frame::after{
+    content: '';
+    position:absolute;
+    inset:4px;
+    background-color: #0c1c39;
+    border-radius: 0.5rem;
+    filter:blur(2px)
+}
+
+.frame:hover::before{
+    inset: -100% -200%;   
+}
+
+.frame:hover::after{
+    box-shadow: inset 0 0 0.6rem #00ccff,
+                inset 0 0 0.6rem  #d400d4;
+}
+
+.project_item{
+    padding:1.2rem;
+    transition: ease-in-out;
+    z-index: 1;
+}
+
+.project_item img{
+     position: relative;
+     width: 100%; 
+     border-radius: 0.4rem;
+     z-index: 1;
 }
 
 .btn{
     font-family: Tomorrow, sans-serif;
     width: max-content;
-    background-color: #F500BD;
-    color: #00BE67;
+    border: #F500BD solid;
+    color: #F500BD;
+    text-shadow: 0 0 0.1em #FFF7,
+    0 0 0.3em  #f712c1;
+    box-shadow: inset 0 0 0.2rem  #F500BD,
+                      0 0 0.3rem  #F500BD;
     text-decoration: none;
     border-radius: 0.4rem;
     padding:0.75rem 1.2rem;
     cursor: pointer;
     display: inline-block;
+    z-index: 1;
 }
-
-.project_item h3{
-    margin:1.2rem 0 2rem;
-    text-align: center;
+.btn:hover{
+    text-shadow: 0 0 0.2em #FFF7,
+                 0 0 0.3em  #f712c1;
+    box-shadow: inset 0 0 0.6rem  #F500BD,
+                      0 0 0.6rem  #F500BD;
 }
-
 .btn2{
     font-family: Tomorrow, sans-serif;
     width: max-content;
-    background-color: #00BE67;
-    color: #F500BD;
+    background-color: #00ccff;
+    color: #000;
+    text-shadow: 0 0 0.1em #FFF7,
+                 0 0 0.1em  #000;
+    box-shadow: inset 0 0 0.2rem  #00ccff,
+                      0 0 0.3rem  #00ccff;
     text-decoration: none;
     border-radius: 0.4rem;
     padding:0.75rem 1.2rem;
     cursor: pointer;
     display: inline-block;
+    z-index: 1;
 }
-
+.btn2:hover{
+    text-shadow: 0 0 0.2em #FFF7,
+                 0 0 0.3em  #000;
+    box-shadow: inset 0 0 0.9rem  #00ccff,
+                      0 0 0.8rem  #00ccff;
+}
 .project_link{
     display: flex;
     justify-content: center;
     gap:2rem;
     margin-bottom:1rem;
+    z-index: 1;
+} 
+.project_title{
+    display: flex;
+    justify-content: center;
+    gap:2rem;
+    margin-bottom:1rem;
+    z-index: 1;
+} 
+
+  .title {
+    padding: 1rem;
+    font-family: Tomorrow, sans-serif;
+    text-align: center;
+    margin-bottom:1rem;
+    z-index: 1;
+    color: #c613ee;
+    text-shadow: 0 0 0.1em #FFF7,
+    0 0 0em  #c613ee;
+} 
+
+.title:hover{
+    text-shadow: 0 0 0.7em rgba(204, 194, 194, 0.467),
+    0 0 0.2em  #c613ee;
 }
