--- a/portfolio/src/style/home.css
+++ b/portfolio/src/style/home.css
@@ -1,10 +1,11 @@
 
 .home-container{
-  padding-left:15%;
-  margin-left: 15%;
-  margin-right: 15%;
-  padding-top:15%;
-  padding-bottom:15%;
+   position: relative;
+   padding-left:17%;
+   margin-left: 15%;
+   margin-right: 15%;
+   padding-top:15%;
+   padding-bottom:15%;
 }
 
  .Topic{
