--- a/portfolio/src/style/index.css
+++ b/portfolio/src/style/index.css
@@ -12,26 +12,30 @@ body{
 
 *{
     box-sizing: border-box;
-    margin: 0;
     padding: 0;
-    border:0;
-    outline:0;
     list-style: none;
     text-decoration: none;
  }
 
-.container{
-    width:100%;
-    height:100vh;
+
+.app{
+    min-height: 100vh;
     scroll-snap-type: y mandatory;
-    margin:0 auto;
+}
+
+.main_content{
+    margin-left: 70px;
 }
 
 section{
     align-items: center;
+    justify-content: center;
     scroll-snap-align: start; 
-    height: 100vh;
 }
 
-
+.page_title{
+    font-family: Tomorrow, sans-serif;
+    color: #F500BD;
+    font-size: 250%;
+}
 
