--- a/portfolio/src/style/navbar.css
+++ b/portfolio/src/style/navbar.css
@@ -1,10 +1,10 @@
 
-nav{
+.sidebar nav{
   position: fixed;
-  left:20px;
+  top: 0;
+  left: 0;
   background-color: #001D31;;
   height: 95vh;
-  top:20px;
   width: 70px;
   border-radius: 10px;
   box-sizing: initial;
@@ -16,6 +16,8 @@ nav{
   0 0 0.3em  #00A1D5;
   box-shadow: inset 0 0 0.6rem #00A1D5,
           0 0 0.6rem  #00A1D5;
+  bottom:5%;
+  top:3%;
 }
 
 nav#open {
