--- a/portfolio/src/style/Experience/skills.css
+++ b/portfolio/src/style/Experience/skills.css
@@ -1,6 +1,6 @@
 
 #Skills {
-  margin-top: 50%; /* Adjust this value as needed */
+  margin-top: 15%; /* Adjust this value as needed */
 }
 
 .container{
@@ -30,13 +30,13 @@
 } */
 /* #7542da */
 
-.skillsSet{
+/* .skillsSet{
   color: #fff;
   font-family: Tomorrow, sans-serif;
   margin-left: 40rem;
   margin-right:33rem;
   text-align: center;
-}
+} */
 
 
 
