--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -51,11 +51,10 @@ blue #45f3ff
 .frame::before{
     content:'';
     position: absolute;
-    inset: -50% 20%;
     inset: -100% -200%;   
-    background: linear-gradient(0deg, #85FEA1,#2c7dff);
+    background: linear-gradient(0deg, #1c6242,#0fff93);
     transition: 0.5s;
-    animation: animation-item 4s linear infinite;
+    animation: animation-item 1s linear infinite;
 }
 
 @keyframes animation-item{
@@ -73,16 +72,11 @@ blue #45f3ff
     content: '';
     position:absolute;
     inset:4px;
-    background-color: #000000;
+    background: linear-gradient(315deg,#2a0e2c,#6c0c79);
     filter:blur(40px);
     border-radius: 0.5rem;
     filter:blur(2px)
 }
-
-.frame:hover::before{
-    inset: -100% -200%;   
-}
-
 
 .project_item{
     padding:1.2rem;
@@ -96,15 +90,87 @@ blue #45f3ff
      border-radius: 0.4rem;
      z-index: 1;
 }
+.project_title{
+    display: flex;
+    justify-content: center;
+    gap:2rem;
+    margin-bottom:1rem;
+    z-index: 1;
+} 
+
+  .title {
+    padding: 1rem;
+    font-family: Tomorrow, sans-serif;
+    text-align: center;
+    margin-bottom:1rem;
+    z-index: 1;
+    color: #00BE67;
+    text-shadow: 0 0 0.1em #FFF7,
+                 0 0 0.1em  #00BE67;
+    animation:  project_title 1.5s infinite;
+    transition: ease-in-out;
+} 
+@keyframes project_title {
+    0%{
+        text-shadow: 0 0 0.1em #FFF7,
+        0 0 0.1em  #00BE67;
+    }
+    15%{
+        text-shadow: 0 0 0.15em #FFF7,
+        0 0 0.15em  #00BE67;
+    }
+
+    25%{
+        text-shadow: 0 0 0.25em #FFF7,
+        0 0 0.25em  #00BE67;
+    }
+
+    35%{
+        text-shadow: 0 0 0.35em #FFF7,
+        0 0 0.35em  #00BE67;
+    }
+    45%{
+        text-shadow: 0 0 0.45em #FFF7,
+        0 0 0.45em  #00BE67;
+    }
+    55%{
+        text-shadow: 0 0 0.55em #FFF7,
+        0 0 0.55em  #00ff9f;
+    }
+    65%{
+        text-shadow: 0 0 0.65em #FFF7,
+        0 0 0.65em  #00BE67;
+    }
+    75%{
+        text-shadow: 0 0 0.75em #FFF7,
+        0 0 0.75em  #0a8354;
+    }
+    85%{
+        text-shadow: 0 0 0.85em #FFF7,
+        0 0 0.85em  #139865;
+    }
+    95%{
+        text-shadow: 0 0 0.95em #FFF7,
+        0 0 0.95em  #35e9a4;
+    }
+    100%{
+        text-shadow: 0 0 1em rgba(204, 194, 194, 0.467),
+        0 0 1em  #06c57c;
+    }
+}
+
+.project_link{
+    display: flex;
+    justify-content: center;
+    gap:2rem;
+    margin-bottom:1rem;
+    z-index: 1;
+} 
 
 .btn{
     font-family: Tomorrow, sans-serif;
     border: 2px #F500BD solid;
     color: #F500BD;
-    text-shadow: 0 0 0.1em #FFF7,
-    0 0 0.3em  #f712c1;
-    box-shadow: inset 0 0 0.2rem  #F500BD,
-                      0 0 0.3rem  #F500BD;
     text-decoration: none;
     border-radius: 0.4rem;
     padding:0.75rem 1.2rem;
@@ -114,20 +180,23 @@ blue #45f3ff
     position: relative;
 }
 
-.btn::before{
-    content: " ";
+.btn:hover::before{
+  content: " ";
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(233, 31, 31, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+  background: linear-gradient(rgba(222, 11, 11, 0) 50%, 
+                              rgba(250, 5, 5, 0.25) 50%), 
+              linear-gradient(90deg, rgba(145, 138, 138, 0.06rgba(44, 171, 167, 0.02)02), rgba(0, 0, 255, 0.06));
   z-index: 0;
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
 }
-.btn::after{
+
+.btn:hover::after{
     content: " ";
     display: block;
     position: absolute;
@@ -141,6 +210,7 @@ blue #45f3ff
     pointer-events: none;
     animation: flicker 0.15s infinite;
 }
+
 @keyframes flicker {
     0% {
     opacity: 0.27861;
@@ -161,19 +231,19 @@ blue #45f3ff
     opacity: 0.83891;
     }
     30% {
-    opacity: 0.65583;
+    opacity: 1.65583;
     }
     35% {
-    opacity: 0.67807;
+    opacity: 1.67807;
     }
     40% {
-    opacity: 0.26559;
+    opacity: 1.26559;
     }
     45% {
     opacity: 0.84693;
     }
     50% {
-    opacity: 0.96019;
+    opacity: 3.96019;
     }
     55% {
     opacity: 0.08594;
@@ -206,24 +276,27 @@ blue #45f3ff
     opacity: 0.24387;
     }
   }
+
 .btn:hover{
-    text-shadow: 0 0 0.2em #FFF7,
-                 0 0 0.3em  #f712c1;
-    box-shadow: inset 0 0 0.6rem  #F500BD,
+    border: 2px #F500BD solid;
+    color: #F500BD;
+    text-shadow: 0 0 0.3em #FFF7,
+    0 0 0.3em  #F500BD;
+    box-shadow: inset 0 0 0.4rem  #F500BD,
                       0 0 0.6rem  #F500BD;
-                      
   z-index: 1;
-  
 }
+
+
+
 .btn2{
+    position: relative;
     font-family: Tomorrow, sans-serif;
+    color:#00BE67;
     width: max-content;
-    border: #00ccff solid;
-    color: #00ccff;
-    text-shadow: 0 0 0.1em #FFF7,
-                 0 0 0.1em  #00ccff;
-    box-shadow: inset 0 0 0.2rem  #00ccff,
-                      0 0 0.3rem  #00ccff;
+    border: #00BE67 solid;
+    box-shadow: inset 0 0 0.1rem  #00ff9f,
+                      0 0 0.1rem  #00ff9f;
     text-decoration: none;
     border-radius: 0.4rem;
     padding:0.75rem 1.2rem;
@@ -232,39 +305,81 @@ blue #45f3ff
     z-index: 1;
 }
 
+
+@keyframes textShadow {
+    0% {
+      text-shadow: 0.4389924193300864px 0 1px rgba(64, 66, 75, 0.5), -0.4389924193300864px 0 1px rgba(155, 242, 26, 0.3), 0 0 3px;
+    }
+    5% {
+      text-shadow: 2.7928974010788217px 0 1px rgba(150, 228, 66, 0.764), -2.7928974010788217px 0 1px rgba(202, 225, 53, 0.3), 0 0 3px;
+    }
+    10% {
+      text-shadow: 0.02956275843481219px 0 1px rgba(233, 136, 17, 0.5), -0.02956275843481219px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    15% {
+      text-shadow: 0.40218538552878136px 0 1px rgba(0,30,255,0.5), -0.40218538552878136px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    20% {
+      text-shadow: 3.4794037899852017px 0 1px rgba(0,30,255,0.5), -3.4794037899852017px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    25% {
+      text-shadow: 1.6125630401149584px 0 1px rgba(0,30,255,0.5), -1.6125630401149584px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    30% {
+      text-shadow: 0.7015590085143956px 0 1px rgba(0,30,255,0.5), -0.7015590085143956px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    35% {
+      text-shadow: 3.896914047650351px 0 1px rgba(0,30,255,0.5), -3.896914047650351px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    40% {
+      text-shadow: 3.870905614848819px 0 1px rgba(0,30,255,0.5), -3.870905614848819px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    45% {
+      text-shadow: 2.231056963361899px 0 1px rgba(0,30,255,0.5), -2.231056963361899px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    50% {
+      text-shadow: 0.08084290417898504px 0 1px rgba(0,30,255,0.5), -0.08084290417898504px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    55% {
+      text-shadow: 2.3758461067427543px 0 1px rgba(0,30,255,0.5), -2.3758461067427543px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    60% {
+      text-shadow: 2.202193051050636px 0 1px rgba(0,30,255,0.5), -2.202193051050636px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    65% {
+      text-shadow: 2.8638780614874975px 0 1px rgba(0,30,255,0.5), -2.8638780614874975px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    70% {
+      text-shadow: 0.48874025155497314px 0 1px rgba(26, 255, 68, 0.5), -0.48874025155497314px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    75% {
+      text-shadow: 1.8948491305757957px 0 1px rgba(0,30,255,0.5), -1.8948491305757957px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    80% {
+      text-shadow: 0.0833037308038857px 0 1px rgba(0,30,255,0.5), -0.0833037308038857px 0 1px rgba(255,0,80,0.3), 0 0 3px;
+    }
+    85% {
+      text-shadow: 0.09769827255241735px 0 1px rgba(226, 243, 45, 0.5), -0.09769827255241735px 0 1px rgba(224, 232, 17, 0.3), 0 0 3px;
+    }
+    90% {
+      text-shadow: 3.443339761481782px 0 1px rgba(193, 255, 78, 0.5), -3.443339761481782px 0 1px rgba(214, 225, 13, 0.3), 0 0 3px;
+    }
+    95% {
+      text-shadow: 2.1841838852799786px 0 1px rgba(48, 135, 14, 0.5), -2.1841838852799786px 0 1px rgba(80, 250, 38, 0.3), 0 0 3px;
+    }
+    100% {
+      text-shadow: 2.6208764473832513px 0 1px rgba(15, 180, 72, 0.5), -2.6208764473832513px 0 1px rgba(66, 252, 199, 0.3), 0 0 3px;
+    }
+  }
+
 .btn2:hover{
     text-shadow: 0 0 0.2em #FFF7,
                  0 0 0.3em  #000;
-    box-shadow: inset 0 0 0.9rem  #00ccff,
-                      0 0 0.8rem  #00ccff;
+    box-shadow: inset 0 0 0.9rem  #00ff9f,
+                      0 0 0.8rem  #00ff9f;
+    background-color: #0a7c3b;
+    animation: textShadow 1.5s infinite;
 }
-.project_link{
-    display: flex;
-    justify-content: center;
-    gap:2rem;
-    margin-bottom:1rem;
-    z-index: 1;
-} 
-.project_title{
-    display: flex;
-    justify-content: center;
-    gap:2rem;
-    margin-bottom:1rem;
-    z-index: 1;
-} 
 
-  .title {
-    padding: 1rem;
-    font-family: Tomorrow, sans-serif;
-    text-align: center;
-    margin-bottom:1rem;
-    z-index: 1;
-    color: #00BE67;
-    text-shadow: 0 0 0.1em #FFF7,
-    0 0 0em  #00BE67;
-} 
 
-.title:hover{
-    text-shadow: 0 0 0.7em rgba(204, 194, 194, 0.467),
-    0 0 0.2em  #00BE67;
-}
+
