--- a/portfolio/src/style/navbar.css
+++ b/portfolio/src/style/navbar.css
@@ -1,24 +1,25 @@
 
-.sidebar nav{
+
+.sidebar nav {
   position: fixed;
+  background-color: #001D31;
   top: 0;
   left: 0;
-  background-color: #001D31;;
   height: 95vh;
   width: 70px;
-  border-radius: 10px;
+  border-radius: 20px;
   box-sizing: initial;
   transition: width 0.5s;
   overflow-x: hidden;
-  z-index: 10; 
-  border: #00A1D5 solid;
-  text-shadow: 0 0 0.2em #FFF7,
-  0 0 0.3em  #00A1D5;
-  box-shadow: inset 0 0 0.6rem #00A1D5,
-          0 0 0.6rem  #00A1D5;
-  bottom:5%;
-  top:3%;
-}
+  z-index: 10;
+  border:  #F500BD solid;
+  text-shadow: 0 0 0.2em #FFF7, 0 0 0.3em #F500BD;
+  box-shadow: inset 0 0 0.6rem #d600ff,
+                    0 0 0.6rem #d600ff;
+  bottom: 5%;
+  top: 3%;
+} 
+
 
 nav#open {
   width: 300px;
@@ -36,11 +37,10 @@ nav#close .close-icon{
 
 nav .wholeul{
   position: absolute;
-  top:130px;
+  top:120px;
   left:0;
   width:100%;
   padding-left: 5px;
-  padding: 40px 5px 0 5px;
 }
 
 nav .wholeul .remove{
@@ -56,8 +56,7 @@ nav .wholeul .remove .barlink{
   width:100%;
   display:flex;
   text-decoration: none;
-  color:aqua;
-  
+  color:#F500BD;
 }
 
 nav .wholeul .remove .barlink .icon{
@@ -89,14 +88,15 @@ nav .wholeul .remove .barlink title{
 hamburger-icon {
   position: relative;
   margin-left: 20px;
-  bottom: 130px;
+  bottom: 90px;
   font-size: 1.2em;
   cursor: pointer;
-  color: aqua;
+  color:#F500BD;
 }
 
+
 hamburger-icon:hover{
-  color: #F500BD;
+  color: #bd00ff;
   animation: hamburger-icon-glowing 2s infinite;
 }
 
@@ -112,10 +112,26 @@ hamburger-icon:hover{
   }
 }
 
+nav .wholeul .remove .barlink::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #bd00ff, #F500BD); 
+  border-radius: 20px;
+  z-index: -1;
+  opacity: 0; /* Initially transparent */
+  transition: opacity 0.3s ease-in-out;
+}
+
+nav .wholeul .remove .barlink:hover::before {
+  opacity: 1; 
+}
 
 /* Apply hover effect to the .barlink class */
 nav .wholeul .remove .barlink:hover {
-  background-color: #F500BD;
   box-shadow: inset 0 0 0.6rem  #F500BD,
                     0 0 0.6rem  #F500BD;
   border-radius: 20px;
@@ -126,6 +142,7 @@ nav .wholeul .remove .barlink:hover {
   animation: glowing2 qs infinite;
   letter-spacing: 3px;
 }
+
 
 @keyframes glowing {
   0% {
