--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -5,7 +5,6 @@
    align-items: center;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 3rem;
-  
 }
 
 @media screen and (max-width: 1024px) {
@@ -13,7 +12,22 @@
         grid-template-columns:repeat(2, 1fr);
         gap:1.2rem;
      }
-
+     .linkInfo{
+      position: relative;
+      margin-top: 20%;
+      gap:1.2rem;
+    }
+  }
+  @media screen and (max-width: 665px) {
+    .btn{
+      left: 10px;
+      position: relative;
+    }
+    .btn2{
+      position: relative;
+      right: 10px;
+    }
+   
   }
 
   @media screen and (max-width: 658px) {
@@ -22,7 +36,25 @@
         grid-template-columns: 1fr;
         gap: 1rem;
      }
+     .btn{
+      left: 0px;
+      position: relative;
+    }
+    .btn2{
+      position: relative;
+      right: 0px;
+    }
   }
+  @media screen and (max-width: 375px) {    
+    .btn{
+      left: 10px;
+      position: relative;
+    }
+    .btn2{
+      position: relative;
+      right: 10px;
+    }
+}
 
 .project{
     position: relative;
@@ -38,14 +70,14 @@ blue #45f3ff
 
 .frame{
     background-color: rgba(0, 0, 0, 0.5);
+    max-width: 100%;
     padding: 1.2rem;
     border-radius: 0.5rem;
     position: relative;
     overflow: hidden;
     justify-content: center;
-    height: 100%; /* You can adjust this value as needed */
+    height: 100%; 
     width: 100%;
-
 }
 
 .frame::before{
@@ -90,6 +122,8 @@ blue #45f3ff
      border-radius: 0.4rem;
      z-index: 1;
 }
+
+
 .project_title{
     display: flex;
     justify-content: center;
@@ -167,17 +201,131 @@ blue #45f3ff
     z-index: 1;
 } 
 
+.detailbtn{
+  font-family: Tomorrow, sans-serif;
+  color:#00BE67;
+  padding:1.5rem 1.5rem;
+  border-radius: 0.5rem;
+  z-index: 1;
+  background-color: transparent;
+  border: #00ff9f solid;
+  box-shadow: inset 0 0 0.11rem  #00ff9f,
+                    0 0 0.1rem  #00ff9f;
+  cursor: pointer;
+}
+
+.detailbtn:hover{
+  box-shadow: inset 0 0 1rem  #00ff9f,
+                    0 0 1rem  #00ff9f;
+}
+
+.frame-overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color:#35e9a4;
+  padding: 1rem;
+  opacity: 0;
+  z-index: 2;
+  transition: opacity 0.6s ease-in-out;
+  border-radius: 0.5rem;
+  border: #6c0c79 0.2rem solid;
+  box-shadow: inset 0 0 2rem  #6c0c79,
+              inset 0 0 2rem  #6c0c79;
+              
+}
+.con{
+  position: relative;
+  padding:20px;
+  bottom: 10%;
+  display: block;
+}
+
+.frame.overlay-visible .frame-overlay {
+  opacity: 1;
+  animation: coverFrame 1.5s forwards;
+}
+
+@keyframes coverFrame{
+  0%{
+    background-color: rgba(0, 0, 0, 0.3);
+    transform: translateY(-700px);
+  }
+  50%{
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  100%{
+    background-color: rgba(0, 0, 0, 1);
+    transform: translateY(0);
+  }
+}
+
+
+.closebtn {
+  position: absolute;
+  cursor: pointer;
+  color: #F500BD;
+  font-size: 1.5rem;
+  z-index: 3;
+  left:15px;
+  top:20px;
+}
+
+.closebtn:hover{
+  color: #00BE67;
+}
+
+.closebtn.btn-hidden {
+  display: none;
+}
+
+.closebtn.btn-visible {
+  animation: coverFrame 1.5s forwards;
+  display: block;
+}
+
+
+.projectAim{
+  margin-top: 60%;
+  color: #F500BD;
+  text-shadow: 0 0 0.1em #FFF7,
+               0 0 0.3em  #ef0dd1;
+}
+
+
+.project_description{
+  font-family: Tomorrow, sans-serif;
+  color:#06c57c;;
+  text-shadow: 0 0 0.2rem rgba(204, 194, 194, 0.467),
+                0 0 0.5rem  #06c57c;
+                
+}
+
+
+.linkInfo{
+  position: relative;
+  margin-top: 20%;
+  display: flex;
+}
+
+
+
 .btn{
     font-family: Tomorrow, sans-serif;
     border: 2px #F500BD solid;
     color: #F500BD;
     text-decoration: none;
     border-radius: 0.4rem;
-    padding:0.75rem 1.2rem;
+    padding:0.70rem 0.8rem;
     cursor: pointer;
     display: inline-block;
-    z-index: 1;
-    position: relative;
 }
 
 .btn:hover::before{
@@ -188,12 +336,13 @@ blue #45f3ff
   left: 0;
   bottom: 0;
   right: 0;
-  background: linear-gradient(rgba(222, 11, 11, 0) 50%, 
+  background: linear-gradient(rgba(0, 0, 0, 0) 50%, 
                               rgba(250, 5, 5, 0.25) 50%), 
               linear-gradient(90deg, rgba(145, 138, 138, 0.06rgba(44, 171, 167, 0.02)02), rgba(0, 0, 255, 0.06));
   z-index: 0;
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
+  cursor: pointer;
 }
 
 .btn:hover::after{
@@ -204,11 +353,12 @@ blue #45f3ff
     left: 0;
     bottom: 0;
     right: 0;
-    background: rgba(18, 16, 16, 0.1);
+    background: rgba(0, 0, 0, 0.1);
     opacity: 0;
     z-index: 0;
     pointer-events: none;
     animation: flicker 0.15s infinite;
+    cursor: pointer;
 }
 
 @keyframes flicker {
@@ -285,12 +435,12 @@ blue #45f3ff
     box-shadow: inset 0 0 0.4rem  #F500BD,
                       0 0 0.6rem  #F500BD;
   z-index: 1;
+  cursor: pointer;
 }
 
 
 
 .btn2{
-    position: relative;
     font-family: Tomorrow, sans-serif;
     color:#00BE67;
     width: max-content;
@@ -299,7 +449,7 @@ blue #45f3ff
                       0 0 0.1rem  #00ff9f;
     text-decoration: none;
     border-radius: 0.4rem;
-    padding:0.75rem 1.2rem;
+    padding:0.70rem 0.8rem;
     cursor: pointer;
     display: inline-block;
     z-index: 1;
@@ -380,6 +530,5 @@ blue #45f3ff
     background-color: #0a7c3b;
     animation: textShadow 1.5s infinite;
 }
-
 
 
