--- a/portfolio/src/style/navbar.css
+++ b/portfolio/src/style/navbar.css
@@ -115,15 +115,18 @@ hamburger-icon:hover{
 nav .wholeul .remove .barlink::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  align-items: center;
   background: linear-gradient(0deg, #bd00ff, #F500BD); 
   border-radius: 20px;
+  box-shadow: inset 0 0 0.6rem  #F500BD,
+  0 0 0.6rem  #F500BD;
   z-index: -1;
   opacity: 0; /* Initially transparent */
   transition: opacity 0.3s ease-in-out;
+  margin-left:-4%;
 }
 
 nav .wholeul .remove .barlink:hover::before {
@@ -132,8 +135,7 @@ nav .wholeul .remove .barlink:hover::before {
 
 /* Apply hover effect to the .barlink class */
 nav .wholeul .remove .barlink:hover {
-  box-shadow: inset 0 0 0.6rem  #F500BD,
-                    0 0 0.6rem  #F500BD;
+
   border-radius: 20px;
   color: black;
   text-shadow: 0 0 0.2em #FFF7,
@@ -141,6 +143,7 @@ nav .wholeul .remove .barlink:hover {
   animation: glowing 1s infinite;
   animation: glowing2 qs infinite;
   letter-spacing: 3px;
+
 }
 
 
