--- a/portfolio/src/style/project.css
+++ b/portfolio/src/style/project.css
@@ -1,10 +1,16 @@
-
 .project-container{
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 3rem;
+}
+
+.project_title{
+  font-family: Tomorrow, sans-serif;
+  color: #00BE67;
+  font-size: 250%;
+  text-align: center;
 }
 
 @media screen and (max-width: 1024px) {
@@ -141,9 +147,10 @@ blue #45f3ff
     color: #00BE67;
     text-shadow: 0 0 0.1em #FFF7,
                  0 0 0.1em  #00BE67;
-    animation:  project_title 1.5s infinite;
+    animation:  project_title 2s infinite;
     transition: ease-in-out;
 } 
+
 @keyframes project_title {
     0%{
         text-shadow: 0 0 0.1em #FFF7,
@@ -172,24 +179,24 @@ blue #45f3ff
         0 0 0.55em  #00ff9f;
     }
     65%{
-        text-shadow: 0 0 0.65em #FFF7,
-        0 0 0.65em  #00BE67;
+      text-shadow: 0 0 0.45em #FFF7,
+      0 0 0.45em  #00BE67;
     }
     75%{
-        text-shadow: 0 0 0.75em #FFF7,
-        0 0 0.75em  #0a8354;
+        text-shadow: 0 0 0.35em #FFF7,
+        0 0 0.35em  #0a8354;
     }
     85%{
-        text-shadow: 0 0 0.85em #FFF7,
-        0 0 0.85em  #139865;
+        text-shadow: 0 0 0.25em #FFF7,
+        0 0 0.25em  #139865;
     }
     95%{
-        text-shadow: 0 0 0.95em #FFF7,
-        0 0 0.95em  #35e9a4;
+        text-shadow: 0 0 0.15em #FFF7,
+        0 0 0.15em  #35e9a4;
     }
     100%{
-        text-shadow: 0 0 1em rgba(204, 194, 194, 0.467),
-        0 0 1em  #06c57c;
+        text-shadow: 0 0 0.1em rgba(204, 194, 194, 0.467),
+        0 0 0.1em  #06c57c;
     }
 }
 
@@ -201,22 +208,112 @@ blue #45f3ff
     z-index: 1;
 } 
 
-.detailbtn{
-  font-family: Tomorrow, sans-serif;
-  color:#00BE67;
-  padding:1.5rem 1.5rem;
-  border-radius: 0.5rem;
+
+.detailbtn,
+.detailbtnh:after {
+  width: 100%;
+  height: 100%;
+  line-height: 60px;
+  background: linear-gradient(#00f51d , #3abf64 , #14b956 );
+  border-radius: 1.5rem;
+  letter-spacing: 3px;
+  outline: transparent;
+  position: relative;
   z-index: 1;
-  background-color: transparent;
-  border: #00ff9f solid;
-  box-shadow: inset 0 0 0.11rem  #00ff9f,
-                    0 0 0.1rem  #00ff9f;
   cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 0 1rem #13df83, 0 0 1rem #10fe10;
 }
 
-.detailbtn:hover{
-  box-shadow: inset 0 0 1rem  #00ff9f,
-                    0 0 1rem  #00ff9f;
+/* color: transparent; 
+-webkit-text-stroke: 2px #000; 
+text-shadow: 0 0 0.1em #FFF7, 0 0 0.1em #111211; */
+
+.gradient-text {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Tomorrow, sans-serif;
+  background: linear-gradient(315deg,#2a0e2c,#6c0c79);
+  -webkit-background-clip: text; 
+  background-clip: text;
+  color: transparent;
+}
+
+.detailbtn:after {
+  --slice-0: inset(50% 50% 50% 50%);
+  --slice-1: inset(80% -6px 0 0);
+  --slice-2: inset(50% -6px 30% 0);
+  --slice-3: inset(10% -6px 85% 0);
+  --slice-4: inset(40% -6px 43% 0);
+  --slice-5: inset(80% -6px 5% 0);
+  font-family: Tomorrow, sans-serif;
+  border-radius: 1.5rem;
+  content: 'More Detail';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(45deg, #00f51d 5%, #3abf64 3%, #14b956 5%);
+  text-shadow: -1px -1px 0px #2a0e2c, 1px 1px 0px #6c0c79;
+  clip-path: var(--slice-0);
+}
+
+
+.detailbtn:hover:after {
+  animation: 1s glitch infinite;
+  animation-timing-function: steps(2, end);
+}
+
+@keyframes glitch {
+  0% {
+    clip-path: var(--slice-1);
+    transform: translate(-20px, -10px);
+  }
+  
+  10% {
+    clip-path: var(--slice-3);
+    transform: translate(10px, 10px);
+  }
+
+  20% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 10px);
+  }
+
+  30% {
+    clip-path: var(--slice-3);
+    transform: translate(0px, 5px);
+  }
+  40% {
+    clip-path: var(--slice-2);
+    transform: translate(-5px, 0px);
+  }
+  50% {
+    clip-path: var(--slice-3);
+    transform: translate(5px, 0px);
+  }
+  60% {
+    clip-path: var(--slice-4);
+    transform: translate(5px, 10px);
+  }
+  70% {
+    clip-path: var(--slice-2);
+    transform: translate(-10px, 10px);
+  }
+  80% {
+    clip-path: var(--slice-5);
+    transform: translate(20px, -10px);
+  }
+  90% {
+    clip-path: var(--slice-1);
+    transform: translate(-10px, 0px);
+  }
+  100% {
+    clip-path: var(--slice-1);
+    transform: translate(0);
+  }
 }
 
 .frame-overlay{
@@ -241,7 +338,8 @@ blue #45f3ff
               inset 0 0 2rem  #6c0c79;
               
 }
-.con{
+
+.project_detail{
   position: relative;
   padding:20px;
   bottom: 10%;
@@ -314,8 +412,6 @@ blue #45f3ff
   margin-top: 20%;
   display: flex;
 }
-
-
 
 .btn{
     font-family: Tomorrow, sans-serif;
